--- a/styles.css
+++ b/styles.css
@@ -129,27 +129,31 @@ p {
   display: inline-block;
   padding-bottom: 0.5rem;
 }
+
 .name-underline::after {
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: unset;
+  top: calc(3.5rem + 8px); /* adjust as needed for spacing below header */
   height: 4px;
   background: #00599C;
   border-radius: 2px;
-  width: 90vw;
-  max-width: 1100px;
-  margin-left: 0;
-  margin-top: 0.5rem;
-  z-index: 1;
+  width: 100vw;
+  max-width: 100vw;
+  margin: 0 auto;
+  z-index: 10;
 }
+
 
 @media (max-width: 1200px) {
   .name-underline::after {
-    width: 80vw;
-    max-width: 95vw;
+    width: 100vw;
+    max-width: 100vw;
+    left: 0;
+    right: 0;
   }
 }
 
@@ -225,3 +229,4 @@ h3{
   }
 
 }
+
