--- a/styles.css
+++ b/styles.css
@@ -133,21 +133,17 @@ p {
 .name-underline::after {
   content: "";
   display: block;
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
-  top: 0;
+  bottom: 0;
   height: 4px;
   background: #00599C;
   border-radius: 2px;
-  width: 100vw;
-  max-width: 100vw;
-  margin: 0 auto;
-  z-index: 1000;
-/* Add padding to body or header to prevent content from being hidden behind the fixed bar */
-body {
-  padding-top: 2.5rem;
-}
+  width: 100%;
+  max-width: 100%;
+  margin: 0;
+  z-index: 1;
 }
 
 
@@ -233,4 +229,5 @@ h3{
   }
 
 }
+
 
